--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,9 @@ networkx>=2.8.0  # For graph operations
 pydot>=1.4.2     # For graph visualization
 graphviz>=0.20.0 # For layout algorithms
 
+# Validation
+email-validator>=2.0.0  # For email validation
+
 # Documentation
 mkdocs>=1.5.0
 mkdocs-material>=9.1.0
@@ -21,3 +24,11 @@ mkdocs-minify-plugin>=0.7.0
 
 # AI Integration
 openai>=1.3.0
+
+# Authentication
+python-jose[cryptography]>=3.3.0  # For JWT tokens
+passlib[bcrypt]>=1.7.4           # For password hashing
+
+# Testing
+pytest>=7.4.0
+httpx>=0.24.1  # Required for FastAPI TestClient
