feat: Add documentation and frontend components
- Add project documentation (technical guides, tutorials)
- Add React components for UI (Documentation, Chat, Workspace)
- Update configuration files (mkdocs.yml, package.json)
- Add project tracking and internal docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ theme:
 
 nav:
   - Home: index.md
+  - Ideas & Motivation: ideas_and_motivation.md
   - Getting Started:
     - Installation: getting-started/installation.md
     - Quick Start: getting-started/quickstart.md
