--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "axios": "^1.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
