--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.7.8",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-search-input": "^0.11.0",
+    "react-sidebar": "^3.0.2",
     "react-syntax-highlighter": "^15.5.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
